# P2PServer

./: .gitignore  CMakeLists.txt  Dockerfile  NoBiggyServer.sln  README.md  cloudbuild.yaml  generate-header-only.sh  premake5.lua
NoBiggyServer/: NoBiggyServer.vcxproj  NoBiggyServer.vcxproj.filters
NoBiggyServer/Include/: NoBiggyServer.h
NoBiggyServer/Source/: Common.h  Main.cpp  NetworkStructs.h  NetworkUtils.cpp  NetworkUtils.h  Platform.h  Server.cpp  Server.h
NoBiggyServer/Tests/: Peer2MutualExclusion.cpp  QueuesMutualExclusion.cpp  QueuesMutualExclusionWithCondition.cpp  Tests.cpp  Tests.h
P2PServer/Include/: P2PServer.h
P2PServer/Source/: LobbyManager.h  Main.cpp  NetworkStructs.h  NetworkUtils.h  P2PServer.cpp  P2PServer.h  R.h
P2PServer/Tests/: Peer2MutualExclusion.cpp  QueuesMutualExclusion.cpp  QueuesMutualExclusionWithCondition.cpp  Tests.cpp  Tests.h
